# zkp-audit-zokrates

./: .gitignore  LICENSE  NOTICE  README.adoc  README.md
audit-balances/: Makefile  audit-balances.zok  input.json
audit-merkle/: Makefile  audit-merkle.zok  input.json
audit-whitelist/: Makefile  audit-whitelist.zok  input.json
common/: common.zok
examples/: readme-input.json
input_generator/: addresses.json  input.json  package-lock.json  package.json  tsconfig.json
input_generator/src/: ZoKNumber.ts  data.ts  generator-balances.ts  generator-merkle.ts  generator-whitelist.ts  generator.ts  index.ts  input.ts  schema-in.ts  schema-out.ts  transformers.ts  util-generic.ts  util-hashing.ts  util-zokrates.ts
measurements/: balances.sizes  generate_size_csvs  generate_time_csvs  merkle.sizes  run_measurements  sizes.csv  times.csv  times.processed.csv  whitelist.sizes
measurements/calculate_mean_times/: calculate_mean_times.py  pyproject.toml
util/: Makefile  u32_8_tools-test.zok  u32_8_tools.zok
