[tool.pdm]
[tool.pdm.scripts]
lint = "flake8 --extend-exclude __pypackages__/"
start = { call = "calculate_mean_times:entry_point" }

[tool.pdm.dev-dependencies]
lint = [
    "flake8>=6.0.0",
]
[project]
name = "calculate-mean-times"
version = "0.1.0"
description = "Calculate the mean execution times and confidence intervals"
authors = [
    {name = "Bertalan Zoltán Péter", email = "bpeter@edu.bme.hu"},
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "pandas>=2.0.1",
    "plac>=1.3.5",
]

[project.scripts]
calculate_mean_times = "calculate_mean_times:entry_point"
